# fun-sentence-splitter

./: .gitignore  LICENSE  README.md  evaluate.sh  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/workflows/: build.yml  publish.yml
fun_sentence_splitter/: __init__.py  sentence_splitter.py
tests/: evaluate_sentence_splitter.py  test_sentence_splitter.py
