[tool.poetry]
name = "fun-sentence-splitter"
version = "0.1.344.post1"
description = "A fundamental sentence splitter based on spacy."
authors = ["Medical AI Engineering <engineering@m-ai.rhenus.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fun_sentence_splitter" }]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "3.4.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.mypy]
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.ruff]
line-length = 120
exclude = [".venv"]

# these rule prefixes are used
select = [
    "A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ANN", "ARG",
    "BLE",
    "COM",
    "DJ", "DTZ",
    "EM", "ERA", "EXE",
    "FBT",
    "ICN", "INP", "ISC",
    "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI",
    "RET", "RSE", "RUF", "SIM", "SLF",
    "TCH", "TID", "TRY",
    "UP",
    "YTT",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101", # allow assertions
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
